# audio_chunking

./: .gitignore  README.md
benchmark/: README.md  benchmark.py  pyproject.toml
benchmark/data/: prepare_dataset.py
benchmark/data/prepared/benchmark/references/: 4462231.ref.txt  4469528.ref.txt  Bmr001.ref.txt  Bns001.ref.txt  Bro003.ref.txt  EN2001a.ref.txt  ES2008a.ref.txt  ES2008b.ref.txt
benchmark/datasets/: CLANKER.md  README.md  __init__.py
benchmark/datasets/ami/: __init__.py  prepare.py  transcripts.py
benchmark/datasets/earnings22/: __init__.py  prepare.py  transcripts.py
benchmark/datasets/icsi/: __init__.py  prepare.py  transcripts.py
benchmark/datasets/prepare/: __init__.py  cases.py  fetching.py  normalization.py  paths.py  word_xml.py
benchmark/evaluation/: __init__.py  tests.py
benchmark/lib/: __init__.py  chunking.py  transcription.py
pipeline/: README.md  main.py  pyproject.toml
pipeline/lib/: async_chunking.py  merge_transcripts.py  vad.py
shared/: README.md  pyproject.toml
shared/animation/: README.md  animation.py  requirements.txt
shared/src/shared/: __init__.py
shared/src/shared/lib/: __init__.py  async_chunking.py  merge_transcripts.py  vad.py
